--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -6,3 +6,5 @@ html
     include includes/site.pug
   body
     include:markdown-it ../md/contact.md
+    include includes/scripts.pug
+    include includes/footer.pug
