--- a/pug/faq.pug
+++ b/pug/faq.pug
@@ -6,3 +6,5 @@ html
     include includes/site.pug
   body
     include:markdown-it ../md/faq.md
+    include includes/scripts.pug
+    include includes/footer.pug
