--- a/pug/includes/topnav.pug
+++ b/pug/includes/topnav.pug
@@ -1,7 +1,12 @@
 //- topnav.pug
-div(class='top-lvl-nav')
-  ul
-    li: a(href='./index.html') PPC Home
-    li: a(href='./vegas.html') RVR 2020
-    li: a(href='./faq.html') FAQ
-    li: a(href='./contact.html') Contact Us
+nav(class='navbar top-lvl-nav')
+  span(class='brand') Pretty Princess Club
+  button(class='navbar-toggle', type='button', data-toggle='collapse', data-target='#navbarSupportedContent1', aria-controls='navbarSupportedContent1', aria-expanded='false', aria-label='Toggle navigation')
+    span(class='hambutton')
+      i(class='fas fa-bars fa-1x')
+  div(class='collapse navbar-collapse', id='navbarSupportedContent1')
+    ul
+      li: a(href='./index.html') PPC Home
+      li: a(href='./vegas.html') RVR 2020
+      li: a(href='./faq.html') FAQ
+      li: a(href='./contact.html') Contact Us
