--- a/pug/vegas.pug
+++ b/pug/vegas.pug
@@ -6,3 +6,5 @@ html
     include includes/site.pug
   body
     include:markdown-it ../md/vegas.md
+    include includes/scripts.pug
+    include includes/footer.pug
