Add content skeleton, add navigation kind of, update compile script to reflect latest edition of node async policies

--- a/pug/vegas.pug
+++ b/pug/vegas.pug
@@ -2,8 +2,9 @@
 doctype html
 html
   head
-    title Pretty Princess Club, LLC
+    title PPC Presents: Royal Vegas Retreat
     include includes/site.pug
+    include includes/event/event-nav.pug
   body
     include:markdown-it ../md/vegas.md
     include includes/scripts.pug
