--- a/css/nav.css
+++ b/css/nav.css
@@ -27,7 +27,7 @@ body {
 .top-lvl-nav li a {
   text-decoration: none;
   color: #070005;
-  display: block;
+  display: inline-block;
   transition: .3s background-color;
 }
 
