--- a/pug/includes/topnav.pug
+++ b/pug/includes/topnav.pug
@@ -1,5 +1,5 @@
 //- topnav.pug
-nav(class='navbar top-lvl-nav')
+nav(class='navbar topnav top-lvl-nav'id='myTopnav')
   span(class='brand') Pretty Princess Club
   button(class='navbar-toggle', type='button', data-toggle='collapse', data-target='#navbarSupportedContent1', aria-controls='navbarSupportedContent1', aria-expanded='false', aria-label='Toggle navigation')
     span(class='hambutton')
