--- a/css/nav.css
+++ b/css/nav.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
 }
 
-.top-lvl-nav {
+/* .top-lvl-nav {
   background-color: #d1ebff;
   box-shadow: none;
 }
@@ -44,7 +44,7 @@ body {
 .navbar-toggle {
   border: none;
   background-color: inherit;
-}
+} */
 
 .brand {
   font-size: 3rem;
@@ -55,3 +55,57 @@ body {
   font-size: 1.5rem;
 }
 
+/*** trying new css for responsve nav **/
+
+.topnav {
+  overflow: hidden;
+  background-color: #fff;
+  border-bottom: 1px solid #ccc;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #0e1015;
+  opacity: 0.5;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  color: #DD689C;
+  opacity: 1;
+}
+
+.active {
+ opacity:1;
+
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
