--- a/css/ppc-page.css
+++ b/css/ppc-page.css
@@ -45,8 +45,9 @@ p {
 }
 
 .hero {
+  margin-top: 70px;
   position: relative;
-  background: url(../ppc-clock-hero.png) no-repeat center center fixed;
+  background: url(../ppc-clock-hero.png) no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -55,8 +56,8 @@ p {
   color: #fff;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 2px;
-  min-height: 250px;
-  padding-top: 230px;
+  min-height: 180px;
+  padding-top: 180px;
 }
 .hero h1 {
   font-size: 50px;
