--- a/css/ppc-page.css
+++ b/css/ppc-page.css
@@ -318,3 +318,13 @@ hr {
       padding:0 0 15px;
     }
 }
+@media (max-width: 978px) {
+  .hero {
+    background-color: #e4f2fb;
+    background-image: none;
+  }
+  .hero h1 {
+    line-height: 1.1;
+    padding: 0px;
+  }
+}
