Increase contrast between body text and background

--- a/css/ppc-page.css
+++ b/css/ppc-page.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  color: #8f8f8f;
+  color: #525252;
   background: white;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
