Change section header color for RVO to match RVO branding

--- a/css/rvo-page.css
+++ b/css/rvo-page.css
@@ -108,7 +108,7 @@ p {
 }
 .section-header {
     line-height: 1.8;
-    color: #0F385E;
+    color: #602020;
     display: block;
     margin-block-start: 0.67em;
     margin-inline-start: 0px;
