--- a/css/rvr-page.css
+++ b/css/rvr-page.css
@@ -14,8 +14,14 @@ body {
 }
 
 a {
+  color: #284568;
+  text-decoration: underline;
+}
+nav ul a:hover,nav ul a.active {
+  color:#284568;
   text-decoration: none;
 }
+
 
 h1,h2,h3,h4,h5{
   display: block;
