Update footer style to match rvo branding and improve contrast

--- a/css/rvo-page.css
+++ b/css/rvo-page.css
@@ -127,7 +127,7 @@ p {
   bottom: 0;
   left: 0;
   padding: 1rem;
-  background-color: #e9f5fd;
+  background-color: #602020;
   text-align: center;
 }
 
@@ -141,12 +141,13 @@ p {
   width: 50%;
   font-size: 14px;
   text-align: left;
+  color: #ffffff;
 }
 .social-block {
   text-align: left;
   font-size: 14px;
   margin:0;
-
+  color: #ffffff;
 }
 .footer-social-icons {
     width: 250px;
@@ -166,7 +167,7 @@ ul.social-icons {
     height: 100px;
 }
 .social-icons a {
-    color: #93cfef;
+    color: #ffffff;
     text-decoration: none;
 }
 .fa-facebook {
@@ -176,7 +177,7 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: ##e9f5fd;
+    background-color: #602020;
 }
 .fa-facebook:hover {
     background-color: #3d5b99;
@@ -189,7 +190,7 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: ##e9f5fd;
+    background-color: #602020;
 }
 .fa-twitter:hover {
     background-color: #00aced;
@@ -202,7 +203,7 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: ##e9f5fd;
+    background-color: #602020;
 }
 .fa-instagram:hover {
     background-color: #D92C7B;
